# aoc2023

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/day1/: Cargo.toml
crates/day1/src/: lib.rs
crates/day2/: Cargo.toml
crates/day2/src/: checker.rs  lib.rs  parser.rs  printer.rs
crates/day3/: Cargo.toml
crates/day4/: Cargo.toml
crates/day4/src/: data.rs  lib.rs  parser.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
